# fastapi-error-map

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml  test-compatibility.yaml
examples/: custom_factory.py  custom_fields.py  errors.py  extended_rule.py  interop.py  quickstart.py  readme_quickstart.py  structured_envelope.py
src/fastapi_error_map/: __init__.py  concurrency.py  error_handling.py  framework.py  handler.py  http_status.py  openapi.py  route_config.py  routing.py  rules.py  translator_policy.py  types_.py
src/fastapi_error_map/translator_factories/: __init__.py  common.py  simple.py  structured.py
tests/: conftest.py  factories.py  test_build_errors.py  test_concurrency.py  test_examples.py  test_handling.py  test_headers.py  test_openapi.py  test_route_config.py  test_routing.py  test_translators.py
tests/integration/: conftest.py  test_example.py  test_exclude_none.py  test_routing.py  test_threadpool.py
tests/typing_cases/: schema_runtime.py
tests/unit/: test_error_handling.py  test_openapi.py  test_routing.py  test_rules.py
