[project]
name = "fastapi-error-map"
version = "1.0.0"
description = "Elegant per-endpoint error handling for FastAPI that keeps OpenAPI in sync"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Ivan Borovets", email = "ivan.r.borovets@gmail.com" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.100,<1.0",
  "typing-extensions>=4.1",
]

[project.urls]
Homepage = "https://github.com/ivan-borovets/fastapi-error-map"
Repository = "https://github.com/ivan-borovets/fastapi-error-map"

[dependency-groups]
dev = [
  "mypy==1.20.2",
  "pre-commit==4.6.0",
  "ruff==0.15.15",
  "tombi==0.11.7",
  { include-group = "test" },
]
all = [
  { include-group = "dev" },
  { include-group = "examples" },
  { include-group = "publish" },
]
examples = [
  "uvicorn==0.35.0",
]
publish = [
  "hatch==1.14.1",
]
test = [
  "coverage==7.10.6",
  "httpx==0.28.1",
  "nox==2025.11.12",
  "pytest==9.0.3",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
  ".* = Literal\\[.*\\]",
  ".* = NewType\\(.*\\)",
  "@(abc\\.)?abstractmethod",
  "\\.\\.\\.",
  "^\\s*raise\\s*$",
  "from .* import .*",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "import .*",
  "logger\\..*",
  "logging\\..*",
  "pass",
]

[tool.coverage.run]
relative_files = true
source = ["src/fastapi_error_map"]
branch = true
omit = [
  "**/__init__.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_error_map"]

[tool.mypy]
mypy_path = ["src"]
files = ["examples", "src/fastapi_error_map", "tests"]
python_version = "3.10"
strict = true
pretty = true
follow_imports = "silent"
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_no_return = true
warn_unreachable = true
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
  "unused-awaitable",
]

[tool.pytest.ini_options]
addopts = ["--color=yes", "-p", "no:cacheprovider"]
filterwarnings = ["error::fastapi_error_map.ErrorMapWarning"]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
  "A",  # flake8-builtins
  "ARG",  # flake8-unused-arguments
  "ASYNC",  # flake8-async
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "C90",  # mccabe
  "DTZ",  # flake8-datetimez
  "E",  # pycodestyle-error
  "ERA001",  # commented-out-code
  "F",  # pyflakes
  "FAST",  # FastAPI
  "FLY",  # flynt
  "FURB",  # refurb
  "G",  # flake8-logging-format
  "I",  # isort
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "N",  # pep8-naming
  "PERF",  # Perflint
  "PL",  # pylint
  "PT",  # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "Q",  # flake8-quotes
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # Ruff-specific rules
  "S",  # flake8-bandit
  "SIM",  # flake8-simplify
  "SLF",  # flake8-self
  "SLOT",  # flake8-slots
  "T20",  # flake8-print
  "TC",  # flake8-type-checking
  "TID",  # flake8-tidy-imports
  "UP",  # pyupgrade
  "W",  # pycodestyle-warning
]
ignore = [
  "PLR0913",  # too-many-arguments — rich declarative signatures are by design here
  "PLR6301",  # no-self-use
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.TYPE_CHECKING".msg = "TYPE_CHECKING is banned: keep imports at module level; resolve cycles by refactoring."

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ARG001",  # unused-function-argument
  "ARG002",  # unused-method-argument
  "ARG005",  # unused-lambda-argument
  "PLR2004",  # magic-value-comparison
  "S101",  # assert
]
"examples/**" = [
  "T201",  # print
]

[tool.uv]
default-groups = ["dev"]
